--- a/src/components/Task/Task.module.scss
+++ b/src/components/Task/Task.module.scss
@@ -24,5 +24,6 @@
 
   .timeToFinish{
     color: #CCC;
+    min-width: 160px;
   }
 }
